correct data table scrollbar width

--- a/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-cell-options.css
+++ b/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-cell-options.css
@@ -49,7 +49,8 @@
     display: block;
 }
 
-.OG-cell-options .OG-icon {
+.OG-cell-options .OG-icon.og-icon-down-chevron,
+.OG-cell-options .OG-icon.og-icon-ellipsis {
     background-color: #ccc;
     float: left;
     margin-left: 1px;
